--- a/index.html
+++ b/index.html
@@ -93,5 +93,69 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>shine smile</title>
   </head>
-  <body></body>
+  <body style="height: 10000px">
+    <!-- header -->
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <!-- logo -->
+          <a href="/."
+            ><img src="./assets/icon/logo.svg" alt="shine smile" class="logo"
+          /></a>
+          <!-- nav -->
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link navbar__link--active">Home</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Services</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Doctors</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- cta action -->
+          <div class="header__action">
+            <a href="#!" class="header__action--login">Log In</a>
+            <a href="#!" class="btn header__action--signup">Sign Up</a>
+          </div>
+        </div>
+        <!-- hero -->
+        <section class="hero">
+          <!-- left -->
+          <section class="hero__content">
+            <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+            <p class="hero__desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="hero__row">
+              <a href="#!" class="btn">Book Online</a>
+              <span class="hero__phone">or call (123) 456-7890</span>
+            </div>
+          </section>
+          <!-- Right -->
+          <div class="hero__media">
+            <figure class="hero__image">
+              <img
+                src="./assets/img/hero 1.png"
+                alt="Exceptional dental care for all ages."
+                class="hero__img hero__img-lange"
+              />
+              <img
+                src="./assets/img/hero 2.png"
+                alt="Exceptional dental care for all ages."
+                class="hero__img hero__img-small"
+              />
+            </figure>
+          </div>
+        </section>
+      </div>
+    </header>
+  </body>
 </html>
