--- a/index.html
+++ b/index.html
@@ -157,5 +157,80 @@
         </section>
       </div>
     </header>
+    <!-- main -->
+    <main>
+      <!-- out service -->
+      <section class="service">
+        <div class="container">
+          <h2 class="service__heading section-heading">Our services</h2>
+          <p class="service__desc section-desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+          <div class="service__row">
+            <!-- service left -->
+            <figure>
+              <img
+                src="./assets/img/hero 1.png"
+                alt="Our services"
+                class="service__img"
+              />
+            </figure>
+            <!-- service right -->
+            <div class="service__list">
+              <!-- Item 1 -->
+              <section class="service-item">
+                <div class="service-item__icon">
+                  <img
+                    src="./assets/icon/service.svg"
+                    alt="General Dentistry"
+                  />
+                </div>
+                <div class="service-item__body">
+                  <h3 class="service-item__heading">Cosmetic Dentistry</h3>
+                  <p class="service-item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </section>
+              <!-- Item 2 -->
+              <section class="service-item">
+                <div class="service-item__icon">
+                  <img
+                    src="./assets/icon/service.svg"
+                    alt="General Dentistry"
+                  />
+                </div>
+                <div class="service-item__body">
+                  <h3 class="service-item__heading">Wisdom Teeth Removal</h3>
+                  <p class="service-item__desc">
+                    Enhance your smile with teeth whitening, veneers, and
+                    bonding services.
+                  </p>
+                </div>
+              </section>
+              <!-- Item 3 -->
+              <section class="service-item">
+                <div class="service-item__icon">
+                  <img
+                    src="./assets/icon/service.svg"
+                    alt="General Dentistry"
+                  />
+                </div>
+                <div class="service-item__body">
+                  <h3 class="service-item__heading">Preventative Dentistry</h3>
+                  <p class="service-item__desc">
+                    Enhance your smile with teeth whitening, veneers, and
+                    bonding services.
+                  </p>
+                </div>
+              </section>
+              <a href="#!" class="btn service__btn">All Services</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
