--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
           </div>
         </div>
       </section>
+
       <!-- work -->
       <section class="work">
         <div class="container">
@@ -242,7 +243,11 @@
           <div class="work__list">
             <!-- Item 1 -->
             <section class="work-item">
-              <img src="./assets/icon/search.svg" alt="Search doctor" class="work-item__icon" />
+              <img
+                src="./assets/icon/search.svg"
+                alt="Search doctor"
+                class="work-item__icon"
+              />
               <h3 class="work-item__heading">Search doctor</h3>
               <p class="work-item__desc">
                 Search a doctor by education, qualifications or experience-
@@ -252,7 +257,11 @@
             </section>
             <!-- Item 2 -->
             <section class="work-item">
-              <img src="./assets/icon/user.svg" alt="Find best doctor" class="work-item__icon" />
+              <img
+                src="./assets/icon/user.svg"
+                alt="Find best doctor"
+                class="work-item__icon"
+              />
               <h3 class="work-item__heading">Find best doctor</h3>
               <p class="work-item__desc">
                 Search a doctor by education, qualifications or experience-
@@ -262,13 +271,49 @@
             </section>
             <!-- Item 3 -->
             <section class="work-item">
-              <img src="./assets/icon/doctor.svg" alt="Get treatment" class="work-item__icon" />
+              <img
+                src="./assets/icon/doctor.svg"
+                alt="Get treatment"
+                class="work-item__icon"
+              />
               <h3 class="work-item__heading">Get treatment</h3>
               <p class="work-item__desc">
                 Search a doctor by education, qualifications or experience-
                 contact for inquiry.
               </p>
               <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <!-- about -->
+      <section class="about">
+        <div class="container">
+          <div class="about-row">
+            <!-- Left -->
+            <div class="about__media">
+              <figure class="about__img">
+                <img
+                  src="./assets/img/hero 1.png"
+                  alt=""
+                  class="about__img--big"
+                />
+                <img
+                  src="./assets/img/hero 2.png"
+                  alt=""
+                  class="about__img--small"
+                />
+              </figure>
+            </div>
+            <!-- Right -->
+            <section class="about-content">
+              <h2 class="section-heading">Take back your smile with shine.</h2>
+              <p class="section-desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="#!" class="btn about-content__btn">Learn More</a>
             </section>
           </div>
         </div>
