--- a/index.html
+++ b/index.html
@@ -318,6 +318,139 @@
           </div>
         </div>
       </section>
+      <!-- team -->
+      <section class="team">
+        <div class="container">
+          <div class="team-header">
+            <h2 class="section-heading">Our virtual dentist</h2>
+            <a href="#!" class="btn team__cta">Meet out dentist</a>
+          </div>
+
+          <div class="team__list">
+            <!-- item 1 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/Dr. Essence Page.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thum"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+            <!-- item 2 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/Dr. Essence Page 2.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thum"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+            <!-- item 3 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/Dr. Essence Page 3.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thum"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+            <!-- item 4 -->
+            <article class="team-item">
+              <div class="team-item__img-bg">
+                <img
+                  src="./assets/img/Dr. Essence Page 4.png"
+                  alt="Dr. Essence Page"
+                  class="team-item__thum"
+                />
+              </div>
+              <h3 class="team-item__name">Dr. Essence Page</h3>
+              <p class="team-item__desc">DDS, California - Linda University</p>
+            </article>
+          </div>
+          <div class="control team__control">
+            <!-- back -->
+            <button class="control__btn">
+              <svg
+                class="control__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+            <!-- next -->
+            <button class="control__btn">
+              <svg
+                class="control__icon control-icon--next"
+                xmlns="http://www.w3.org/2000/svg"
+                width="6"
+                height="12"
+                viewBox="0 0 6 12"
+                fill="none"
+              >
+                <path
+                  d="M5.5 1L0.5 6L5.5 11"
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- install mobile -->
+      <section class="install">
+        <div class="container">
+          <div class="install__inner">
+            <figure>
+              <img src="./assets/img/Mobile.png" alt="" class="install__img" />
+            </figure>
+            <section class="install__content">
+              <h2 class="section-heading install__heading">
+                Take back your smile with dentures
+              </h2>
+              <p class="install__desc">
+                If you’re missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <div class="install__row">
+                <a href="#!">
+                  <img
+                    src="./assets/icon/Googleplay.svg.svg"
+                    alt=""
+                    class="install__btn-ing"
+                  />
+                </a>
+                <a href="#!">
+                  <img
+                    src="./assets/icon/Appstore.svg.svg"
+                    alt=""
+                    class="install__btn-img"
+                  />
+                </a>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
