--- a/index.html
+++ b/index.html
@@ -565,6 +565,105 @@
           </div>
         </div>
       </section>
+      <!-- footer -->
+      <section class="footer">
+        <div class="container">
+          <!-- top -->
+          <div class="footer__top">
+            <!-- cl1 -->
+            <div class="foooter__column">
+              <a href="./">
+                <img src="./assets/icon/logo.svg" alt="" class="logo" />
+              </a>
+              <p class="footer__desc">
+                Exceptional dental care for all ages. Your great smile begins
+                with a great dentist.
+              </p>
+            </div>
+            <!-- cl2 -->
+            <div class="foooter__column">
+              <h3 class="footer__heading">Support</h3>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Help center</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Account information</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">About</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Contact us</a>
+                </li>
+              </ul>
+              <h3 class="footer__heading">Support</h3>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Help center</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Account information</a>
+                </li>
+              </ul>
+            </div>
+            <!-- cl3 -->
+            <div class="foooter__column">
+              <h3 class="footer__heading">Support</h3>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Help center</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Account information</a>
+                </li>
+              </ul>
+              <h3 class="footer__heading">Support</h3>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#!" class="footer__link">Help center</a>
+                </li>
+              </ul>
+            </div>
+            <!-- cl4 -->
+            <div class="foooter__column">
+              <h3 class="footer__heading">Support</h3>
+              <div class="footer__social">
+                <a href="#!" class="footer__social-btn"
+                  ><img src="./assets/icon/fb.svg" alt="Facebook"
+                /></a>
+                <a href="#!" class="footer__social-btn"
+                  ><img src="./assets/icon/tw.svg" alt="Twitter"
+                /></a>
+                <a href="#!" class="footer__social-btn"
+                  ><img src="/assets/icon/Lk.svg" alt="Linkelin"
+                /></a>
+                <a href="#!" class="footer__social-btn"></a>
+              </div>
+              <h3 class="footer__heading">Support</h3>
+              <p class="footer__desc">
+                Subscribe our newsletter for the latest update of Dental care
+              </p>
+              <form class="footer-form" action="">
+                <input
+                  type="email"
+                  placeholder="Enter your email"
+                  class="footer-form__input"
+                />
+                <button type="submit" class="btn footer__submit-btn">
+                  Subscribe
+                </button>
+              </form>
+            </div>
+          </div>
+          <!-- bottom -->
+          <div class="footer__copyright">
+            <p class="footer__copyright-text">
+              2021 GDN. Copyright and All rights reserved.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
